# structured-doc-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  SPEC.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/extractor/: __init__.py  api.py  cli.py  completeness.py  config.py  cost.py  events.py  jobs.py  json_util.py  logger.py  models.py  rate_limit.py  runner.py  schema_builder.py  schema_validate.py  security.py  types.py  verification.py
src/extractor/agent/: extraction.py  prompts.py  schema_planner.py  stream_adapter.py
src/extractor/completion/: __init__.py  content.py  extraction.py  openrouter_client.py  tool_runner.py  tool_schemas.py
src/extractor/parsing/: image.py  pdf.py  registry.py  strategy.py
src/extractor/tools/: context.py  document_tools.py  mcp_content.py  operations.py
tests/: golden_eval.py  test_api.py  test_cli.py  test_completeness.py  test_completion.py  test_config.py  test_cost.py  test_events.py  test_golden_eval.py  test_integration.py  test_json_util.py  test_logger.py  test_mcp_content.py  test_models.py  test_openrouter_client.py  test_rate_limit.py  test_runner.py  test_schema_builder.py  test_schema_validate.py  test_security.py  test_verification.py  test_vision_fallback.py
tests/fixtures/: bottles_ci_expected.json
ui/: app.js  index.html  sample_result.json  styles.css
ui/presets/: demos.json  invoice.json  transport_strasse.json
