[project]
name = "extractor"
version = "0.1.0"
description = "Agentic document extraction pipeline with Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk>=0.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pymupdf>=1.24",
  "pypdf>=5.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
extractor = "extractor.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: live Claude Agent SDK (requires OPENROUTER_API_KEY or ANTHROPIC_API_KEY)",
]
